# serial

./: .gitignore  CMakeLists.txt  README.md
examples/: test.cc
include/serial/: Buffer.hh  Serial.hh
src/: Buffer.cc  Serial.cc
tests/: construction.cc
tests/scripts/: loopback.sh
